# windowsPipe

./: CMakeLists.txt
include/: CMakeLists.txt  namedPipe.namedPipeServer.h  namedPipe.pipeIdentifier.ixx  windowsPipe.namedPipeServer.h
src/: CMakeLists.txt  NamedPipeServerTask.cpp  NamedPipeServerTask.h  namedPipe.dllMain.ixx  namedPipe.namedPipeServer.cpp  windowsPipe.dllMain.ixx  windowsPipe.namedPipeServer.cpp
src/client/: client.js
