cmake_minimum_required(VERSION 3.29)
project(windowsPipe)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
set(QT_VERSION 5)
set(CADLIB_DIR "C:\\source\\cadlib")
set(CADWORK_VERSION 30)

find_package(CwAPI3D CONFIG REQUIRED)

set(CMAKE_PREFIX_PATH "${CADLIB_DIR}\\3rdParty\\v_${CADWORK_VERSION}.0\\Qt\\x64\\lib\\cmake\\Qt${QT_VERSION}")
find_package(Qt${QT_VERSION} COMPONENTS
        Core
        Network
        REQUIRED)

add_library(${PROJECT_NAME} SHARED)
add_subdirectory(src)
add_subdirectory(include)

target_link_libraries(${PROJECT_NAME} PRIVATE
        Qt${QT_VERSION}::Core
        Qt${QT_VERSION}::Network
        CwAPI3D::CwAPI3D
)

target_include_directories(${PROJECT_NAME} PRIVATE include)
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_BINARY_DIR})

target_compile_definitions(${PROJECT_NAME} PRIVATE CWAPI3D_PLUGIN_NAME=L"WindowsPipe")
target_compile_definitions(${PROJECT_NAME} PRIVATE CWAPI3D_AUTHOR_NAME=L"Michael Brunner")
target_compile_definitions(${PROJECT_NAME} PRIVATE CWAPI3D_AUTHOR_EMAIL=L"brunner@cadwork.swiss")